# scoped-exit-cxx20

./: .clang-format  .gitignore  CMakeLists.txt  README.md
header/: CMakeLists.txt  scoped_exit.hxx
sample/: CMakeLists.txt  run.cxx
